--- a/bitcoin-donation-app/package.json
+++ b/bitcoin-donation-app/package.json
@@ -29,13 +29,16 @@
   "author": "Alex Glover",
   "license": "MIT",
   "dependencies": {
+    "auth0-js": "8.8.0",
     "object-assign": "4.1.0",
     "react": "15.5.4",
+    "react-cookie": "2.0.8",
     "react-dom": "15.5.4",
     "react-redux": "5.0.5",
     "react-router": "3.0.5",
     "react-router-redux": "4.0.8",
     "redux": "3.6.0",
+    "redux-form": "7.0.0",
     "redux-thunk": "2.1.0",
     "whatwg-fetch": "2.0.3"
   },
@@ -46,12 +49,15 @@
     "babel-eslint": "7.1.1",
     "babel-jest": "18.0.0",
     "babel-loader": "6.2.10",
+    "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-react-constant-elements": "6.9.1",
     "babel-plugin-transform-react-remove-prop-types": "0.2.11",
     "babel-polyfill": "6.20.0",
     "babel-preset-env": "1.3.2",
+    "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.16.0",
     "babel-preset-react-hmre": "1.1.1",
+    "babel-preset-stage-0": "6.24.1",
     "babel-preset-stage-1": "6.16.0",
     "browser-sync": "2.18.5",
     "chalk": "1.1.3",
@@ -66,6 +72,7 @@
     "extract-text-webpack-plugin": "2.1.0",
     "file-loader": "0.9.0",
     "html-webpack-plugin": "2.24.1",
+    "i": "0.3.5",
     "identity-obj-proxy": "3.0.0",
     "jest": "18.1.0",
     "json-loader": "0.5.4",
@@ -87,6 +94,7 @@
     "webpack": "2.2.1",
     "webpack-bundle-analyzer": "2.1.1",
     "webpack-dev-middleware": "1.9.0",
+    "webpack-dev-server": "2.5.1",
     "webpack-hot-middleware": "2.17.1",
     "webpack-md5-hash": "0.0.5"
   },
@@ -104,7 +112,10 @@
   "babel": {
     "presets": [
       "react",
-      "stage-1"
+      "stage-0"
+    ],
+    "plugins": [
+      "transform-class-properties"
     ],
     "env": {
       "development": {
@@ -126,7 +137,8 @@
         ],
         "plugins": [
           "transform-react-constant-elements",
-          "transform-react-remove-prop-types"
+          "transform-react-remove-prop-types",
+          "transform-class-properties"
         ]
       },
       "test": {
