--- a/bitcoin-donation-app/package.json
+++ b/bitcoin-donation-app/package.json
@@ -34,6 +34,8 @@
     "react": "15.5.4",
     "react-cookie": "2.0.8",
     "react-dom": "15.5.4",
+    "react-fontawesome": "1.6.1",
+    "react-icons": "2.2.5",
     "react-redux": "5.0.5",
     "react-router": "3.0.5",
     "react-router-redux": "4.0.8",
